2022-10-30  Dirk Eddelbuettel  <edd@debian.org>

	* src/init.c: Add 'void' for proper prototypes pleasing clang-15

2022-03-12  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.3.11
	* configure.ac: Idem
	* configure: Idem

	* src/Makevars.ucrt: Updated for RTools42

2021-12-18  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-10-07  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.3.10
	* configure.ac: Idem
	* configure: Idem

	* configure.ac: Updated via 'autoupdate' and 'autoreconf
	--warnings=obsolete' to bring to autoconf 2.69 standards
	* configure: Idem

2021-06-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* inst/tinytest/test_client_package.R: Skip Windows if no LIB_GSL var

2021-06-23  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.3.9

        * configure: Rebuilt

2021-06-23  Jeroen Ooms  <jeroenooms@gmail.com>

	* tools/winlibs.R: Update to GSL 2.7 and support UCRT build
	* src/Makevars.win: Update to GSL 2.7
	* src/Makevars.ucrt: Support UCRT build

2021-05-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugReports): Added

2021-01-10  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/RcppGSL-introduction.Rmd: And short subsection
	mentioning need for explicit getter in output.

2020-06-21  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.3.8

        * configure: Rebuilt

	* inst/include/RcppGSLForward.h: Add some missing 'inline' statements
	* inst/include/RcppGSL_matrix.h: Idem
	* inst/include/RcppGSL_matrix_view.h: Idem
	* inst/include/RcppGSL_vector.h: Idem
	* inst/include/RcppGSL_vector_view.h: Idem